# RustyFork

./: Cargo.toml  LICENSE
src/: main.rs  requestHandler.rs
static/root/: .htaccess  Tech.html  acm_small.css  index.html
static/root/css/: style.css  stylish-portfolio.css
template/: base.html  index.html
