[package]
name = "rusty_fork"
version = "0.1.0"
authors = ["Michael Stumpf <michaelstumpf585@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.0"
tera = "0.11"
